--- a/.github/workflows/build-test-push.yml
+++ b/.github/workflows/build-test-push.yml
@@ -15,17 +15,17 @@ jobs:
       - name: Build Docker Image
         run: docker build . --file Dockerfile -t macmie2411999/ma-product-service:latest
 
-      # Test container
-      - name: Run Docker Container
-        run: docker run -p 8000:80 -d macmie2411999/ma-product-service:latest
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-      - name: Install requirements
-        run: pip install pytest requests
-      - name: Run tests
-        run: pytest
+#      # Test container
+#      - name: Run Docker Container
+#        run: docker run -p 8000:80 -d macmie2411999/ma-product-service:latest
+#      - name: Set up Python
+#        uses: actions/setup-python@v4
+#        with:
+#          python-version: '3.9'
+#      - name: Install requirements
+#        run: pip install pytest requests
+#      - name: Run tests
+#        run: pytest
 
       # Push tag
       - name: Login into Docker Hub
