--- a/.github/workflows/build-test-push.yml
+++ b/.github/workflows/build-test-push.yml
@@ -35,3 +35,5 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push tag to Docker Hub
         run: docker push macmie2411999/ma-product-service:latest
+
+        #mlem
